# spaceinvaders

./: CMakeLists.txt  Justfile  README.md  flake.nix
graphics/: CMakeLists.txt  sprites.cc
graphics/include/graphics/: sprites.h
include/spaceinvaders/: cannon.h  elements.h  invaders.h  level.h  pause.h  screens.h  start.h  states.h
logic/: CMakeLists.txt  state_machine.cc
logic/include/logic/: state.h  state_machine.h
src/: CMakeLists.txt  cannon.cc  invaders.cc  level.cc  main.cc  menu.cc  pause.cc  screens.cc
